<resources>
    <string name="app_name">"Bancolino   "</string>
    <string name="txt_text1_String">XXXX</string>
    <string name="txt_text2_String">XXXX</string>
    <string name="txt_text3_String">XXXX</string>
    <string name="txt_text4_String">XXXX</string>
    <string name="txt_text6_String">Cerrar Sesión</string>
    <string name="txt_text5_String">Ingrese Clave Secreta</string>
    <string name="button_String">INGRESAR</string>
    <string name="title_activity_cuenta_bancaria" translatable="false">CuentaBancariaActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="txt_title1_String">Cuenta Bancaria</string>
    <string name="txt_title2_String">Transacciones</string>
    <string name="txt_transaccion1_String">Ingrese Número de Cuenta</string>
    <string name="txt_transaccion2_String">Ingrese Monto</string>
    <string name="txt_transaccion3_String">Monto (S/.)</string>
    <string name="txt_transaccion4_String">Depositar</string>
    <string name="txt_public_String">Volver</string>
    <string name="txt_cuenta_String">  Mis Cuentas</string>
    <string name="txt_cuenta1_String">Rubro</string>
    <string name="txt_cuenta2_String">Balance</string>
    <string name="txt_cuenta3_String">Pago de Luz</string>
    <string name="txt_cuenta4_String">Transacciones</string>
    <string name="txt_cuenta5_String">Pago Telefonia</string>
    <string name="txt_cuenta6_String">A. Sueldo</string>
    <string name="txt_cuenta7_String">Pago Agua</string>
    <string name="txt_cuenta8_String">Retiros</string>
    <string name="txt_pago1_String">Agua</string>
    <string name="txt_pago2_String">Luz</string>
    <string name="txt_pago3_String">Estudios</string>
    <string name="txt_pago4_String">Telefonia</string>
    <string name="txt_pago5_String">Pago de Agua</string>
    <string name="txt_pago6_String">Monto a Pagar</string>
    <string name="txt_pago7_String">Código de Suministro</string>
    <string name="txt_pago8_String">Ingrese Codigo de Suministro</string>
    <string name="txt_pago9_String">Pago de Servicios</string>
    <string name="txt_pago10_String">Pagar</string>
    <string name="txt_adela1_String">Adelanto de Sueldo</string>
    <string name="txt_adela2_String">Tienes un monto aprobado de:</string>
    <string name="txt_adela3_String">Se cargara a la cuenta:</string>
    <string name="txt_adela4_String">Aceptar</string>
    <string name="txt_adela5_String">Monto Transferido Exitósamente:</string>
    <string name="txt_adela6_String">Comisión</string>
    <string name="txt_luz1_String">Pago de Luz</string>
    <string name="txt_luz2_String">Código</string>
    <string name="txt_luz3_String">Código de Suministro</string>
    <string name="txt_luz4_String">Ingrese Código de Suministro</string>
    <string name="txt_pag1_String">Pago de Telefono</string>
    <string name="txt_pag2_String">Numero</string>
    <string name="txt_pag3_String">Monto de la Deuda</string>
    <string name="txt_uni1_String">Pago de Universidad</string>
    <string name="txt_uni2_String">Universidad</string>
    <string name="txt_uni3_String" translatable="false">Universidad Nacional de San Agustin</string>
    <string name="table_linea1_String" translatable="false">Cuentas de Ahorro</string>
    <string name="table_linea2_String" translatable="false">Cuenta de Debito</string>
    <string name="table_linea3_String" translatable="false">Cuenta de Credito</string>
    <string name="table_linea4_String" translatable="false">Cuenta Corriente</string>
    <string name="table_linea5_String" translatable="false">Nuevas Cuentas</string>
    <string name="table_linea6_String" translatable="false">S/.153,155.00</string>
    <string name="table_linea7_String" translatable="false">S/.533,105.00</string>
    <string name="table_linea8_String" translatable="false">S/.123,155.00</string>
    <string name="table_linea9_String" translatable="false">S/.3,155.00</string>
    <string name="table_linea10_String" translatable="false">S/.953,155.00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
