<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_text1"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_text1_String"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_text2"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_text2"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/txt_text2_String"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_text3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_text3"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/txt_text3_String"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_text4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_text4"
        android:layout_width="59dp"
        android:layout_height="40dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/txt_text4_String"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:onClick="Ingresar"
        android:text="@string/button_String"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/txt_text5_String"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="393dp"
        android:layout_height="405dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tarjetalogin" />

</android.support.constraint.ConstraintLayout>